MEEMO-1 change s3 client lib, fix integration tests
